--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,10 +1,11 @@
 <h1><%= @order.user.email.titleize %></h1>
-<h1>Your Order is: <%= @order.id %></h1>
+<h1>Your Order is: <%= 1000 + @order.id %></h1>
 
-<h3>Quantity: <%= @order.quantity %></h3>
 <h3>Subtotal: <%= number_to_currency(@order.subtotal) %></h3>
 <h3>Tax: <%= number_to_currency(@order.tax) %></h3>
 <hr>
 <h3>Total: <%= number_to_currency(@order.total) %></h3>
-
-<%= image_tag @order.product.get_the_first_image %>
+<hr>
+<% @order.carted_products.each do |carted_product| %>
+  <h2><%= carted_product.product.name %> - Qty: <%= carted_product.quantity %></h2>
+<% end %>
