--- a/app/views/carted_products/index.html.erb
+++ b/app/views/carted_products/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Your Cart</h1>
 
 <% @carted_products.each do |carted_product| %>
-  <h2><%= carted_product.product.name %> - Qty: <%= carted_product.quantity %></h2>
+  <h2><%= carted_product.product.name %> - Qty: <%= carted_product.quantity %> <%= link_to "Remove Item", "/carted_products/#{carted_product.id}", method: :delete %></h2>
 <% end %>
 
 <%= form_tag "/orders", method: :post do %>
