--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
             <li class="divider"></li>
             <% if current_user %>
               <li><%= link_to "Sign Out", "/users/sign_out", method: :delete %></li>
-              <li><span class="glyphicon glyphicon-shopping-cart"> <%= link_to "Cart", "/carted_products" %></span></li>
+              <li><span class="glyphicon glyphicon-shopping-cart"> <%= link_to "Cart (#{@cart_count})", "/carted_products" %></span></li>
             <% else %>
               <li><%= link_to "Sign In", "users/sign_in" %></li>
               <li><%= link_to "Sign Up", "users/sign_up" %></li>
